# ig-client

./: Cargo.toml  Makefile  README.md
Docker/: Dockerfile  docker-compose.yml
examples/: positions_example.rs  rest_auth_example.rs  tx.rs  tx_loop.rs  websocket_example.rs  ws_auth_example.rs
src/: config.rs  constants.rs  error.rs  lib.rs
src/application/: mod.rs
src/application/models/: account.rs  market.rs  mod.rs  order.rs  transaction.rs
src/application/services/: account_service.rs  ig_tx_client.rs  market_service.rs  mod.rs  order_service.rs
src/presentation/: encryption.rs  mod.rs  serialization.rs
src/session/: account.rs  auth.rs  interface.rs  mod.rs  session.rs  session_response.rs  ws_auth.rs
src/storage/: config.rs  utils.rs
src/transport/: headers.rs  http_client.rs  mod.rs  model.rs  websocket_client.rs  ws_client.rs  ws_interface.rs
src/utils/: finance.rs  logger.rs  mod.rs  transactions.rs
tests/unit/: mod.rs
