[package]
name = "ig_client"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Tool for converting OHLC (Open, High, Low, Close) market data into simulated tick data. The tool generates pseudo-tick data by interpolating between OHLC prices, allowing users to create more granular market data from aggregated time series. This can be particularly useful for testing trading algorithms, backtesting strategies, or any scenario where tick-level data is required but only OHLC data is available."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ig-client"
homepage = "https://github.com/joaquinbejar/ig-client"
keywords = ["finance", "ohlc", "tick", "trading"]
categories = ["finance", "data-structures"]
exclude = [
    "/examples",
    "/tests",
    "/target",
    "/.git",
    "/.github",
    "/.idea",
    "/.vscode",
    "Cargo.lock",
    "/**/.DS_Store",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
approx = "0.5.1"
plotters = "0.3"
statrs = "0.17.1"
rayon = "1.10.0"
rand = "0.8.5"
itertools-num = "0.1.0"
uuid = { version = "1.10.0", features = ["serde","v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zip = "2.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
csv = "1.3.0"


[dev-dependencies]
assert-json-diff = "2.0.2"
mockall = "0.13.0"
tokio-test = "0.4.4"
futures-util = "0.3.30"
async-std = "1.12.0"
lazy_static = "1.5.0"
tempfile = "3.12.0"
ctor = "0.2.8"
criterion = "0.5.1"
indicatif = "0.17.8"
pretty_assertions = "1.4.0"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[lib]
name = "ig-client"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"