[package]
name = "ig_client"
version = "0.1.0"
edition = "2021"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "This crate provides a client for the IG Markets API"
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/ig-client"
homepage = "https://github.com/joaquinbejar/ig-client"
keywords = ["finance", "ohlc", "tick", "trading"]
categories = ["finance", "data-structures"]
exclude = [
    "/examples",
    "/tests",
    "/target",
    "/.git",
    "/.github",
    "/.idea",
    "/.vscode",
    "Cargo.lock",
    "/**/.DS_Store",
]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "examples/**/*",
    "tests/**/*",
    "Makefile",
    "rust-toolchain.toml",
    "Draws/**/*",
    "Docker/**/*",
]

[dependencies]
tokio-tungstenite = "0.23.1"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros", "time", "signal"] }
chrono = { version = "0.4.38", features = ["serde"] }
approx = "0.5.1"
uuid = { version = "1.10.0", features = ["serde","v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
anyhow = "1.0.86"
reqwest = { version = "0.12.7", features = ["json"] }
criterion = "0.5.1"
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
futures-util = "0.3.30"
futures = "0.3.30"
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
pretty_assertions = "1.4.0"
mockito = "1.5.0"
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1.0"
once_cell = "1.19.0"

[[test]]
name = "tests"
path = "tests/unit/mod.rs"

[lib]
name = "ig_client"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"